# enshrined-vrf

./: .gitignore  .gitmodules  .golangci.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PR.md  README.md  codecov.yml  deny.toml  docker-bake.hcl  fork.yaml  go.mod  go.sum  justfile  mise.toml  sync-superchain.sh
.circleci/: config.yml  l2-rpcs.json  rust-nightly-bump.yml
.circleci/continue/: alloy-op-evm.yml  alloy-op-hardforks.yml  docs-ci.yml  kona.yml  main.yml  op-alloy.yml  op-reth.yml  rust-ci.yml  rust-e2e.yml
.circleci/scripts/: check-l2-chains-sync.sh
.cursor/rules/: solidity-styles.mdc
.github/: CODEOWNERS  dependabot.yml  docker-images.json
.github/workflows/: acceptance-tests.yaml  branches.yaml  deploy-docs.yml  docker.yaml  docs.yaml  lychee.yaml  node_e2e_sysgo_tests.yaml  proof.yaml  protected.yaml  publish_artifacts.yaml  rust_ci.yaml  supervisor_e2e_kurtosis.yaml  supervisor_e2e_sysgo.yaml  sync.yaml  tags.yaml  trh-vrf-readiness.yml  unprotected.yaml
.semgrep/rules/: sol-rules.yaml  sol-safety-delegatecall-no-storage.yaml
.semgrep/tests/: sol-rules.sol-safety-initialize-assert-proxy-admin.t.sol  sol-rules.sol-safety-opcmv2-use-internal-version.t.sol  sol-rules.sol-safety-proper-initializer.t.sol  sol-rules.t.sol  (+2 more)
alloy-op-evm/: Cargo.toml  deny.toml
alloy-op-evm/src/block/: canyon.rs  mod.rs
alloy-op-hardforks/: Cargo.toml  deny.toml
alloy-op-hardforks/src/base/: mainnet.rs
arcade/: index.html
cannon/: Dockerfile.diff  Makefile  README.md  justfile
contracts/: foundry.toml
core/: bintrie_witness_test.go  blockchain.go  blockchain_reader.go  chain_makers.go  evm.go  gen_genesis.go  genesis.go  genesis_test.go  rlp_test.go  state_processor.go  state_processor_test.go  state_transition.go  superchain_test.go  verkle_witness_test.go
demo/: aa-flow-en.html  aa-flow.html  aa-implementation.html  aa-spec.html  architecture.html  blockchain-randomness.html  last-revealer.html  package-lock.json  package.json  presentation-script.md  session-accounts.html  session-play.html  vrf-live-demo.html
diff-site/: .gitignore  generate.sh  op-geth-fork.yaml  optimism-fork.yaml  page.gohtml  vercel.json
docs/: PRD.md  README.md  architecture.md  op-stack-customizations.md  package-lock.json  package.json  phase-1-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  security-audit-checklist.md  sepolia-devnet.md  session-accounts.md  testing-guide.md  trh-tee-game-l2-completion-audit.md  trh-tee-game-l2.md
docs-site/: .gitignore  .mintignore  README.md  changelog.mdx  docs.json  introduction.mdx  package-lock.json  package.json  quickstart.mdx  vercel.json
e2e/: vrf_e2e_test.go
eth/: api_backend.go  api_backend_op.go  api_debug.go  backend.go  handler.go  handler_eth.go  handler_eth_test.go  handler_test.go  state_accessor.go
ethclient/: ethclient_op_test.go  ethclient_test.go
game/: README.md  index.html
graphql/: graphql.go
justfiles/: deprecated.mk  git.just  uptodate.sh
kona/: .gitignore  Cargo.toml  README.md  deny.toml  justfile  typos.toml
kona-proofs/: version.json
kurtosis-devnet/: interop.yaml  isthmus.yaml  jovian.yaml  justfile  simple.yaml
linter/: .custom-gcl.yml  Makefile  justfile
metrics/: gauge.go
miner/: miner.go  miner_optimism_test.go  op_interop_miner_test.go  payload_building.go  payload_building_test.go  vrf_builder.go  vrf_builder_test.go  vrf_config.go  worker.go
node/: node.go
op-acceptance-tests/: README.md  acceptance-tests.yaml  justfile
op-alloy/: Justfile  deny.toml
op-alt-da/: Dockerfile  damgr.go  damgr_test.go
op-challenger/: README.md  justfile
op-deployer/: README.md  RELOCATED-DOCS.md  justfile
op-devstack/: README.md
op-dispute-mon/: Dockerfile  README.md
op-e2e/: Makefile  README.md  justfile
op-interop-filter/: Makefile  README.md  justfile
op-node/: service.go  vrf_prover.go
op-program/: Dockerfile.vmcompat  Dockerfile.vmcompat.dockerignore  Makefile  README.md  justfile  repro.justfile
op-reth/: Cargo.toml  deny.toml  justfile
op-reth/crates/payload/src/: builder.rs
op-service/: README.md  util.go
op-supernode/: README.md  safety-labels.md
op-supervisor/: README.md
op-up/: main.go  smoke.go
op-wheel/: commands.go
p2p/: server.go
params/: config.go  config_op.go  config_test.go  protocol_params.go  superchain.go
rpc/: client.go  client_test.go  handler.go  http.go  server.go
scripts/: arcade.sh  commit-feature-split.sh  demo-local.sh  devnet-build.sh  devnet-rpc-chain-id.sh  devnet-sepolia-deploy-jankenman.sh  devnet-sepolia-fund-deployer.sh  devnet-sepolia-preflight.sh  devnet-sepolia-prepare.sh  devnet-sepolia-render-intent.sh  devnet-sepolia-start.sh  devnet-sepolia-stop.sh  devnet-sepolia-up.sh  devnet-sepolia-verify-random.sh  test-trh-attestation-policy.sh  test-trh-export-vrf-metrics.sh  test-trh-render-vrf-settings.sh  test-trh-validate-thanos-stack-chart.sh  trh-apply-external-patches.sh  trh-attest-vrf-enclave.sh  trh-build-vrf-enclave-eif.sh  trh-build-vrf-enclave-image.sh  trh-check-external-integration.sh  trh-check-external-patches.sh  trh-export-vrf-metrics.sh  trh-local-readiness.sh  trh-production-vrf-gate.sh  trh-render-vrf-metadata.sh  trh-render-vrf-settings.sh  trh-tee-readiness.sh  trh-thanos-vrf-post-renderer.rb  trh-validate-attestation-policy.sh  trh-validate-k8s-vrf-sidecar.sh  trh-validate-thanos-stack-chart.sh  trh-validate-vrf-metadata.sh  trh-validate-vrf-settings.sh  trh-verify-external-patches-compile.sh  trh-verify-nitro-attestation.sh  trh-verify-vrf-chain.sh  trh-verify-vrf-proof.sh  (+1 more)
session-accounts-ko/: DESIGN.md  index.html  meta.json
src/: lib.rs  spec.rs
superchain/: types.go
tests/: go.mod  go.sum  justfile  state_test_util.go
tokamak-arcade/: DESIGN.md  index.html
tokamak-arcade-next/: .env.example  .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.ts
version/: version.go
vrf-enclave/: Dockerfile  Dockerfile.dockerignore
vrf-video/: DESIGN.md  index.html  meta.json
vrf-video-ko/: index.html  meta.json
(+1867 files in other folders)
