[package]
name = "alloy-op-hardforks"
description = "Bindings for named OP hardforks"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
alloy-hardforks.workspace = true
alloy-chains.workspace = true

auto_impl.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = [
	"dep:serde",
	"alloy-hardforks/serde"
]
