[package]
name = "alloy-op-evm"
description = "OP EVM implementation"

version = "0.26.3"
edition = "2021"
rust-version = "1.88"
authors = ["Alloy Contributors", "OpLabsPBC"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ethereum-optimism/optimism"
repository = "https://github.com/ethereum-optimism/optimism"

[lints.rustdoc]
all = "warn"

[lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "allow"
redundant-clone = "warn"

[dependencies]
alloy-evm = { version = "0.26.3", default-features = false, features = ["op"] }

alloy-eips = { version = "1.0.34", default-features = false }
alloy-consensus = { version = "1.0.27", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }

alloy-op-hardforks = { version = "0.4.7" }
op-alloy = { version = "0.23", default-features = false, features = ["consensus"] }

revm = { version = "34.0.0", default-features = false }
op-revm = { version = "15.0.0", default-features = false }

thiserror = { version = "2.0.0", default-features = false }

auto_impl = "1"

[dev-dependencies]
alloy-hardforks = { version = "0.4.7" }
test-case = "3"

[features]
default = ["std"]
std = [
	"alloy-primitives/std",
	"revm/std",
	"alloy-evm/std",
	"op-revm/std",
	"alloy-consensus/std",
	"alloy-eips/std",
	"op-alloy/std",
	"thiserror/std"
]
gmp = ["alloy-evm/gmp"]
asm-keccak = ["alloy-evm/asm-keccak", "alloy-primitives/asm-keccak", "revm/asm-keccak"]
