[package]
name = "alloy-op-hardforks"
description = "Bindings for named OP hardforks"

version = "0.4.7"
edition = "2024"
rust-version = "1.85"
authors = ["Alloy Contributors", "OpLabsPBC"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ethereum-optimism/optimism"
repository = "https://github.com/ethereum-optimism/optimism"

[package.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy-hardforks = { version = "0.4.7", default-features = false }

# ethereum
alloy-chains = { version = "0.2.0", default-features = false }
alloy-primitives = { version = "1.0.0", default-features = false }

# misc
auto_impl = "1"
serde = { version = "1.0", features = ["derive", "alloc"], default-features = false, optional = true }

[features]
serde = [
	"dep:serde",
	"alloy-hardforks/serde"
]
