[workspace.package]
version = "1.10.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
exclude = [".github/"]

[workspace]
members = [
    "bin/",
    "crates/chainspec/",
    "crates/cli/",
    "crates/consensus/",
    "crates/evm/",
    "crates/flashblocks/",
    "crates/hardforks/",
    "crates/node/",
    "crates/payload/",
    "crates/primitives/",
    "crates/reth/",
    "crates/rpc/",
    "crates/storage/",
    "crates/txpool/",
]
default-members = ["bin/"]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
borrow_as_ptr = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
iter_without_into_iter = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_is_variant_and = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing-const-for-fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
option_as_ref_cloned = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
result_large_err = "allow"
redundant_clone = "warn"
redundant_else = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_self_imports = "warn"
unnecessary_struct_initialization = "warn"
unnested_or_patterns = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
zero_sized_map_values = "warn"

as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
too_long_first_doc_paragraph = "allow"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package]
proptest.opt-level = 3
rand_chacha.opt-level = 3
rand_xorshift.opt-level = 3
unarray.opt-level = 3

[profile.hivetests]
inherits = "test"
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"

[profile.bench]
inherits = "profiling"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.reproducible]
inherits = "release"
panic = "abort"
codegen-units = 1
incremental = false

[workspace.dependencies]
# ==================== OP-RETH INTERNAL CRATES ====================
op-reth = { path = "bin/" }
reth-optimism-chainspec = { path = "crates/chainspec/", default-features = false }
reth-optimism-cli = { path = "crates/cli/", default-features = false }
reth-optimism-consensus = { path = "crates/consensus/", default-features = false }
reth-optimism-evm = { path = "crates/evm/", default-features = false }
reth-optimism-flashblocks = { path = "crates/flashblocks/" }
reth-optimism-forks = { path = "crates/hardforks/", default-features = false }
reth-optimism-node = { path = "crates/node/" }
reth-optimism-payload-builder = { path = "crates/payload/" }
reth-optimism-primitives = { path = "crates/primitives/", default-features = false }
reth-op = { path = "crates/reth/", default-features = false }
reth-optimism-rpc = { path = "crates/rpc/" }
reth-optimism-storage = { path = "crates/storage/" }
reth-optimism-txpool = { path = "crates/txpool/" }

# ==================== RETH CRATES (from git revision b3d532ce9d09b925ebbce7bdf213d04c402e124c) ====================
reth = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-downloaders = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-exex = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-node-events = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-node-metrics = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-payload-validator = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-prune = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-static-file = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-static-file-types = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c" }
reth-zstd-compressors = { git = "https://github.com/paradigmxyz/reth", rev = "b3d532ce9d09b925ebbce7bdf213d04c402e124c", default-features = false }

# ==================== REVM ====================
revm = { version = "34.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-interpreter = { version = "32.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }
op-revm = { version = "15.0.0", default-features = false }
revm-inspectors = "0.34.1"

# ==================== ALLOY ====================
alloy-chains = { version = "0.2.5", default-features = false }
alloy-dyn-abi = "1.5.4"
alloy-eip2124 = { version = "0.2.0", default-features = false }
alloy-eip7928 = { version = "0.3.0", default-features = false }
alloy-evm = { version = "0.27.0", default-features = false }
alloy-primitives = { version = "1.5.4", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }
alloy-sol-macro = "1.5.4"
alloy-sol-types = { version = "1.5.4", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

alloy-hardforks = "0.4.5"

alloy-consensus = { version = "1.5.2", default-features = false }
alloy-contract = { version = "1.5.2", default-features = false }
alloy-eips = { version = "1.5.2", default-features = false }
alloy-genesis = { version = "1.5.2", default-features = false }
alloy-json-rpc = { version = "1.5.2", default-features = false }
alloy-network = { version = "1.5.2", default-features = false }
alloy-network-primitives = { version = "1.5.2", default-features = false }
alloy-provider = { version = "1.5.2", features = ["reqwest", "debug-api"], default-features = false }
alloy-pubsub = { version = "1.5.2", default-features = false }
alloy-rpc-client = { version = "1.5.2", default-features = false }
alloy-rpc-types = { version = "1.5.2", features = ["eth"], default-features = false }
alloy-rpc-types-admin = { version = "1.5.2", default-features = false }
alloy-rpc-types-anvil = { version = "1.5.2", default-features = false }
alloy-rpc-types-beacon = { version = "1.5.2", default-features = false }
alloy-rpc-types-debug = { version = "1.5.2", default-features = false }
alloy-rpc-types-engine = { version = "1.5.2", default-features = false }
alloy-rpc-types-eth = { version = "1.5.2", default-features = false }
alloy-rpc-types-mev = { version = "1.5.2", default-features = false }
alloy-rpc-types-trace = { version = "1.5.2", default-features = false }
alloy-rpc-types-txpool = { version = "1.5.2", default-features = false }
alloy-serde = { version = "1.5.2", default-features = false }
alloy-signer = { version = "1.5.2", default-features = false }
alloy-signer-local = { version = "1.5.2", default-features = false }
alloy-transport = { version = "1.5.2" }
alloy-transport-http = { version = "1.5.2", features = ["reqwest-rustls-tls"], default-features = false }
alloy-transport-ipc = { version = "1.5.2", default-features = false }
alloy-transport-ws = { version = "1.5.2", default-features = false }

# ==================== OP-ALLOY ====================
alloy-op-evm = { version = "0.27.0", default-features = false }
alloy-op-hardforks = "0.4.4"
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.23.1", default-features = false }
op-alloy-flz = { version = "0.13.1", default-features = false }

# ==================== ASYNC ====================
async-compression = { version = "0.4", default-features = false }
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "1.3"
hyper-util = "0.1.5"
pin-project = "1.0.12"
reqwest = { version = "0.12", default-features = false }
tracing-futures = "0.2"
tower = "0.5"
tower-http = "0.6"

# ==================== TOKIO ====================
tokio = { version = "1.44.2", default-features = false }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.26.2"
tokio-util = { version = "0.7.4", features = ["codec"] }

# ==================== RPC ====================
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-server = "0.26.0"
jsonrpsee-http-client = "0.26.0"
jsonrpsee-types = "0.26.0"

# ==================== CRYPTO ====================
c-kzg = "2.1.5"
enr = { version = "0.13", default-features = false }
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
secp256k1 = { version = "0.30", default-features = false, features = ["global-context", "recovery"] }
sha2 = { version = "0.10", default-features = false }

# ==================== SERIALIZATION ====================
bincode = "1.3"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
toml = "0.8"

# ==================== METRICS ====================
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.18.0", default-features = false }
metrics-process = "2.1.0"
metrics-util = { default-features = false, version = "0.20.0" }

# ==================== TRACING ====================
tracing = { version = "0.1.0", default-features = false }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }

# ==================== TESTING ====================
arbitrary = "1.3"
assert_matches = "1.5.0"
criterion = { package = "codspeed-criterion-compat", version = "4.3" }
insta = "1.41"
proptest = "1.7"
proptest-derive = "0.5"
proptest-arbitrary-interop = "0.1.0"
similar-asserts = { version = "1.5.0", features = ["serde"] }
tempfile = "3.20"
test-fuzz = "7"
rstest = "0.24.0"
test-case = "3"

# ==================== COMPRESSION ====================
brotli = "8"
lz4 = "1.28.1"
lz4_flex = { version = "0.11", default-features = false }
miniz_oxide = { version = "0.8.4", default-features = false }
zstd = "0.13"
tar-no-std = { version = "0.3.2", default-features = false }

# ==================== MISC ====================
either = { version = "1.15.0", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
aquamarine = "0.6"
auto_impl = "1"
backon = { version = "1.2", default-features = false, features = ["std-blocking-sleep", "tokio-sleep"] }
bitflags = "2.4"
boyer-moore-magiclen = "0.2.16"
bytes = { version = "1.5", default-features = false }
cfg-if = "1.0"
clap = "4"
color-eyre = "0.6"
dashmap = "6.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
dirs-next = "2.0.0"
dyn-clone = "1.0.17"
eyre = "0.6"
fdlimit = "0.3.0"
fixed-map = { version = "0.9", default-features = false }
humantime = "2.1"
humantime-serde = "1.1"
itertools = { version = "0.14", default-features = false }
linked_hash_set = "0.1"
modular-bitfield = "0.11.2"
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
nybbles = { version = "0.4.2", default-features = false }
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }
parking_lot = "0.12"
paste = "1.0"
rand = "0.9"
rand_08 = { package = "rand", version = "0.8" }
rayon = "1.7"
ringbuffer = "0.15.0"
rustc-hash = { version = "2.0", default-features = false }
schnellru = "0.2"
shellexpand = "3.0.0"
shlex = "1.3"
smallvec = "1"
strum = { version = "0.27", default-features = false }
strum_macros = "0.27"
syn = "2.0"
thiserror = { version = "2.0.0", default-features = false }
tar = "0.4.44"
url = { version = "2.3", default-features = false }
byteorder = "1"
mini-moka = "0.10"
moka = "0.12"
chrono = "0.4.41"

# proc-macros
proc-macro2 = "1.0"
quote = "1.0"

# http
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
jsonwebtoken = "9"

# networking
ipnet = "2.11"

# allocators
jemalloc_pprof = { version = "0.8", default-features = false }
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = "0.6"
tracy-client = "0.18.0"
snmalloc-rs = { version = "0.3.7", features = ["build_cc"] }
